fix: wrong spacing on safari due to flex box

--- a/src/Features/CocktailContainer.module.css
+++ b/src/Features/CocktailContainer.module.css
@@ -5,8 +5,6 @@
   border-radius: 12px;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  align-content: center;
   justify-content: center;
 }
 
